--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">WQMS</string>
+    <string name="app_title">Water Quality Monitoring System</string>
+
+    <!-- MainActivity -->
+    <string name="label_goto_graphs">View Data</string>
+    <string name="label_goto_about">About</string>
+    <string name="description_logo">logos</string>
+
 </resources>
